HiM: z-index fix for award icons

--- a/source/sass/heritage_in_motion/_him-page-entry-list.scss
+++ b/source/sass/heritage_in_motion/_him-page-entry-list.scss
@@ -69,7 +69,7 @@
 		background-color: rgba(255,255,255,0.2);
 		border-radius: 200px;
 		position: absolute;
-		z-index: 50;
+		z-index: 8;
 		right: $space-half;
 		top: $space-half;
 	}
